# mlx-bertopic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  NOTICES.md  README.md  pyproject.toml
.omc/state/: agent-replay-72d785a1-174b-4cb8-9824-dd04bccb6de1.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
.omk/: prd.md
benchmarks/: RESULTS.md  bench_bm25.py  bench_ctfidf.py  bench_ctfidf_large.py  bench_suite.py  bench_umap_e2e.py
examples/: run_bertopic_mlx.py
mlx_bertopic/: __init__.py  ctfidf.py  embedder.py  outlier.py  representation.py  umap.py  viz.py
mlx_ctfidf/: __init__.py
mlx_dtm/: __init__.py  neural_dtm.py
mlx_hdbscan/: __init__.py  _cluster.py  _distances.py  _mst.py
mlx_keybert/: __init__.py
mlx_lda/: __init__.py
mlx_outlier/: __init__.py
patches/: mlx_vis_issue_draft.md  mlx_vis_umap_stability.md
tests/: test_agreement.py  test_ctfidf.py  test_ctfidf_golden.py  test_ctfidf_parity.py  test_dtm.py  test_integration.py  test_keybert.py  test_lda.py  test_nonconvex.py  test_outlier.py
