[project]
name = "mlx-bertopic"
version = "0.6.0"
description = "BERTopic backends for Apple Silicon (MLX Metal GPU)"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "mlx>=0.20.0",
    "mlx-embeddings>=0.2.0",
    "mlx-vis>=0.7.0",
    "mlx-hdbscan @ git+ssh://git@git.lcn.tw:2222/felix/mlx-hdbscan.git@main",
    "mlx-ctfidf @ git+ssh://git@git.lcn.tw:2222/felix/mlx-ctfidf.git@main",
    "mlx-outlier @ git+ssh://git@git.lcn.tw:2222/felix/mlx-outlier.git@main",
    "mlx-keybert @ git+ssh://git@git.lcn.tw:2222/felix/mlx-keybert.git@main",
    "bertopic>=0.16.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mlx_bertopic*"]
