[project]
name = "mlx-bertopic"
version = "0.6.0"
description = "BERTopic backends for Apple Silicon (MLX Metal GPU)"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "mlx>=0.20.0",
    "mlx-embeddings>=0.2.0",
    "mlx-vis>=0.7.0",
    "bertopic>=0.16.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mlx_bertopic*", "mlx_ctfidf*", "mlx_hdbscan*", "mlx_keybert*", "mlx_lda*", "mlx_dtm*", "mlx_outlier*"]
